--- a/.github/workflows/test-without-libvulkan.yml
+++ b/.github/workflows/test-without-libvulkan.yml
@@ -39,7 +39,7 @@ jobs:
         if: matrix.os == 'windows-2019'
         shell: bash
         run: |
-          pip install built-wheels/ncnn-1.0.20230906-cp38-cp38-win32.whl
+          pip install built-wheels/ncnn-1.0.20230906-cp38-cp38-win_amd64.whl
           pip install pytest
 
       - name: install ncnn for macos
