--- a/.github/workflows/test-without-libvulkan.yml
+++ b/.github/workflows/test-without-libvulkan.yml
@@ -35,6 +35,10 @@ jobs:
           pip install built-wheels/ncnn-1.0.20230906-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
           pip install pytest
 
+      - name: Setup VS2019
+        if: matrix.os == 'windows-2019'
+        uses: warrenbuckley/Setup-MSBuild@v1
+
       - name: install ncnn for windows
         if: matrix.os == 'windows-2019'
         shell: bash
