--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -52,20 +52,20 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' }
-          # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' }
-          # - { os: ubuntu-20.04, arch: x86_64,     build: 'pp*'            }
-          # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' } 
-          # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' } 
-          # - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            } 
-          # - { os: windows-2019, arch: x86,        build: 'cp*'            } 
-          - { os: windows-2019, arch: AMD64,      build: 'cp38-win_amd64'            }
-          # - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
-          # - { os: windows-2019, arch: ARM64,      build: 'cp*'            } 
-          # - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
-          # - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
-          # - { os: macos-latest, arch: arm64,      build: 'cp*'            } 
-          # - { os: macos-latest, arch: universal2, build: 'cp*'            } 
+          - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' }
+          - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' }
+          - { os: ubuntu-20.04, arch: x86_64,     build: 'pp*'            }
+          - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' } 
+          - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' } 
+          - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            } 
+          - { os: windows-2019, arch: x86,        build: 'cp*'            } 
+          - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
+          - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
+          - { os: windows-2019, arch: ARM64,      build: 'cp*'            } 
+          - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
+          - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
+          - { os: macos-latest, arch: arm64,      build: 'cp*'            } 
+          - { os: macos-latest, arch: universal2, build: 'cp*'            } 
 
     steps:
       - uses: actions/checkout@v3
@@ -190,68 +190,68 @@ jobs:
         with:
           path: wheelhouse/*.whl
 
-  # build_wheels_qemu:
-  #   name: ${{ matrix.arch }} ${{ matrix.build }}
-  #   runs-on: ubuntu-20.04
+  build_wheels_qemu:
+    name: ${{ matrix.arch }} ${{ matrix.build }}
+    runs-on: ubuntu-20.04
 
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       arch: [aarch64, ppc64le, s390x]
-  #       build: ['cp36-*', 'cp37-*', 'cp38-*', 'cp39-*', 'cp310-*', 'cp311-*', 'cp312-*']
-  #       include:
-  #         - arch: aarch64
-  #           build: 'pp37-*'
-  #         - arch: aarch64
-  #           build: 'pp38-*'
-  #         - arch: aarch64
-  #           build: 'pp39-*'
-  #         - arch: aarch64
-  #           build: 'pp310-*'
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [aarch64, ppc64le, s390x]
+        build: ['cp36-*', 'cp37-*', 'cp38-*', 'cp39-*', 'cp310-*', 'cp311-*', 'cp312-*']
+        include:
+          - arch: aarch64
+            build: 'pp37-*'
+          - arch: aarch64
+            build: 'pp38-*'
+          - arch: aarch64
+            build: 'pp39-*'
+          - arch: aarch64
+            build: 'pp310-*'
 
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #     with:
-  #       submodules: true
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: true
 
-  #   - name: init submodules
-  #     shell: bash
-  #     run: |
-  #       cd ncnn-python-gpu
-  #       git submodule update --init
-  #       cd python
-  #       git submodule update --init
+    - name: init submodules
+      shell: bash
+      run: |
+        cd ncnn-python-gpu
+        git submodule update --init
+        cd python
+        git submodule update --init
 
-  #   - uses: actions/setup-python@v4
-  #     with:
-  #       python-version: '3.x'
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
 
-  #   - name: Set up QEMU
-  #     uses: docker/setup-qemu-action@v2
-  #     with:
-  #       platforms: all
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      with:
+        platforms: all
 
-  #   - name: Build wheels
-  #     uses: pypa/cibuildwheel@v2.15.0
-  #     env:
-  #       CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-  #       CIBW_BUILD: ${{ matrix.build }}
-  #       CIBW_BUILD_VERBOSITY: 1
-  #       CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2
-  #     with:
-  #         package-dir: ./ncnn-python-gpu
-  #         output-dir: wheelhouse
+    - name: Build wheels
+      uses: pypa/cibuildwheel@v2.15.0
+      env:
+        CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+        CIBW_BUILD: ${{ matrix.build }}
+        CIBW_BUILD_VERBOSITY: 1
+        CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2
+      with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
 
-  #   - name: Show files
-  #     run: ls -lh wheelhouse
-  #     shell: bash
+    - name: Show files
+      run: ls -lh wheelhouse
+      shell: bash
 
-  #   - name: Verify clean directory
-  #     run: git diff --exit-code
-  #     shell: bash
+    - name: Verify clean directory
+      run: git diff --exit-code
+      shell: bash
 
-  #   - name: Upload wheels
-  #     uses: actions/upload-artifact@v3
-  #     with:
-  #       path: wheelhouse/*.whl
+    - name: Upload wheels
+      uses: actions/upload-artifact@v3
+      with:
+        path: wheelhouse/*.whl
         
