--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -53,10 +53,10 @@ jobs:
       matrix:
         include:
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' }
-          - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' }
+          # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' }
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'pp*'            }
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' } 
-          # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' } 
+          - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' } 
           # - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            } 
           # - { os: windows-2019, arch: x86,        build: 'cp*'            } 
           # - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
@@ -159,8 +159,8 @@ jobs:
           package-dir: ncnn-python-gpu
           output-dir: wheelhouse
 
-      - name: Build wheels for ubuntu x86_64 musllinux
-        if: matrix.os == 'ubuntu-20.04' && matrix.arch == 'x86_64'  &&  matrix.build == 'cp*-musllinux*'
+      - name: Build wheels for ubuntu musllinux
+        if: matrix.os == 'ubuntu-20.04' && matrix.build == 'cp*-musllinux*'
         uses: pypa/cibuildwheel@v2.15.0
         env:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
