--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -56,9 +56,9 @@ jobs:
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' }
           # - { os: ubuntu-20.04, arch: x86_64,     build: 'pp*'            }
           # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' } 
-          - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' } 
+          # - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' } 
           # - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            } 
-          # - { os: windows-2019, arch: x86,        build: 'cp*'            } 
+          - { os: windows-2019, arch: x86,        build: 'cp*'            } 
           # - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
           # - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
           # - { os: windows-2019, arch: ARM64,      build: 'cp*'            } 
@@ -143,6 +143,26 @@ jobs:
           CIBW_REPAIR_WHEEL_COMMAND: delvewheel repair -w {dest_dir} {wheel}
         with:
           package-dir: ncnn-python-gpu
+          output-dir: wheelhouse
+
+    - name: Build wheels for windows x86
+        if: matrix.os == 'windows-2019' && matrix.arch == 'x86'
+        uses: pypa/cibuildwheel@v2.15.0
+        env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=/project/Vulkan-Loader/build/Vulkan-Headers LD_LIBRARY_PATH=/project/Vulkan-Loader/build/loader
+          CIBW_BEFORE_ALL: yum -y install libXrandr-devel &&
+                           git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
+                           cd Vulkan-Loader && mkdir build && cd build &&
+                           ../scripts/update_deps.py &&
+                           cmake -DCMAKE_BUILD_TYPE=Release -DVULKAN_HEADERS_INSTALL_DIR=$(PWD)/Vulkan-Headers/build/install .. &&
+                           make -j2
+        with:
+          package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
 
       - name: Build wheels for macos x86_64
